--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </div>
 <div class="container text-center justify-content-center mt-5" >
  <div class="row mt-5">
-   <div class="col col-4"></div>
-   <div class="col col-4">
+   <div class="col col-4 sm-4 lg-4 md-4"></div>
+   <div class="col col-4 sm-4 lg-4 md-4">
 
      <div class="card shadow-lg form-control rounded-4" style="width: 400px; background-color: #fff;">
        <img src="Surface Pro 8 - 1.png" class="card-img-top" alt="qrcode" style="padding: 3%;">
@@ -34,8 +34,10 @@
      </div>
 
    </div>
-   <div class="col col-4">
-      
+   <div class="col col-4 sm-4 lg-4 md-4">
+      <div class="container">
+        <br>
+      </div>
    </div>
  </div>
 </div>
