--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 
     <!-- Fontawesome-->
  <link rel="stylesheet" href="/fontawesome/css/all.css">
+
+   <!-- Custom CSS-->
+   <style>
+
+     .card {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+   </style>
+  
   </head>
   <body style="background-color: rgba(214, 225, 240, 1);">
 <div class="container" >
@@ -22,8 +34,8 @@
 </div>
 <div class="container text-center justify-content-center mt-5" >
  <div class="row mt-5">
-   <div class="col col-4 sm-4 lg-4 md-4"></div>
-   <div class="col col-4 sm-4 lg-4 md-4">
+   <div class="col col-3 col-lg-4 col-md-4 col-sm-4"></div>
+   <div class="col col-3 col-lg-4 col-md-4 col-sm-4">
 
      <div class="card shadow-lg form-control rounded-4" style="width: 400px; background-color: #fff;">
        <img src="Surface Pro 8 - 1.png" class="card-img-top" alt="qrcode" style="padding: 3%;">
@@ -34,7 +46,7 @@
      </div>
 
    </div>
-   <div class="col col-4 sm-4 lg-4 md-4">
+   <div class="col col-3 col-lg-4 col-md-4 col-sm-4">
       <div class="container">
         <br>
       </div>
